# Screen-share

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: client_renderer.cpp  client_renderer.hpp  discovery.hpp  h264_decoder.cpp  h264_decoder.hpp  h264_encoder.cpp  h264_encoder.hpp  input_injector.hpp  input_injector_factory.cpp  input_injector_factory.hpp  input_protocol.hpp  keycode_mapping.hpp  main.cpp  mdns_broadcaster.cpp  mdns_broadcaster.hpp  peer_registry.cpp  peer_registry.hpp  screen_capture.hpp  screen_capture_factory.cpp  screen_capture_factory.hpp  signaling_client.cpp  signaling_client.hpp  signaling_protocol.cpp  signaling_protocol.hpp  signaling_server.cpp  signaling_server.hpp  state_machine.cpp  state_machine.hpp  uinput_injector.cpp  uinput_injector.hpp  uuid_utils.hpp  video_streamer.cpp  video_streamer.hpp  webrtc_connection.cpp  webrtc_connection.hpp  windows_injector.cpp  windows_injector.hpp  xcb_screen_capture.cpp  xcb_screen_capture.hpp
